--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "http-server": "^0.9.0",
     "jade": "^1.11.0",
     "metalsmith": "^1.0.0",
+    "metalsmith-clean-css": "^5.0.1",
     "metalsmith-drafts": "0.0.1",
     "metalsmith-layouts": "^1.4.1",
     "metalsmith-markdown": "^0.2.1",
